Set container at the top on mobile to avoid keyboard layout

--- a/src/client/components/pages/WalletPage.module.css
+++ b/src/client/components/pages/WalletPage.module.css
@@ -6,7 +6,8 @@
     text-align: center;
 }
 
-.container {
+.container,
+.containerTop {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -14,14 +15,19 @@
     justify-content: center;
     background: rgba(0, 0, 0, 0.5);
 }
+.containerTop {
+    align-items: flex-start;
+}
 
 .popup {
+    margin-top: 36px;
+    margin-bottom: 36px;
     position: relative;
     width: calc(100% - 80px);
     max-width: 490px;
     padding: 12px;
     border-radius: 10px;
-    display: flex;
+    display: block;
     align-items: center;
     flex-direction: column;
 }
